# lazyjob

./: AGENTS.md  Cargo.toml
crates/lazyjob-cli/: Cargo.toml
crates/lazyjob-cli/src/: main.rs  worker.rs
crates/lazyjob-core/: Cargo.toml
crates/lazyjob-core/migrations/: 001_initial_schema.sql  002_unique_job_source.sql  003_job_embeddings.sql  004_resume_versions.sql  005_cover_letter_versions.sql  006_contacts_networking.sql  007_outreach_drafts.sql
crates/lazyjob-core/src/: config.rs  credentials.rs  db.rs  error.rs  lib.rs  stats.rs  test_db.rs
crates/lazyjob-core/src/cover_letter/: docx.rs  generator.rs  mod.rs  repository.rs  types.rs
crates/lazyjob-core/src/discovery/: company.rs  matching.rs  mod.rs  service.rs
crates/lazyjob-core/src/discovery/sources/: greenhouse.rs  lever.rs  mod.rs
crates/lazyjob-core/src/domain/: application.rs  company.rs  contact.rs  ids.rs  interview.rs  job.rs  mod.rs  offer.rs
crates/lazyjob-core/src/life_sheet/: json_resume.rs  mod.rs  service.rs  types.rs
crates/lazyjob-core/src/networking/: connection_mapper.rs  csv_import.rs  mod.rs  outreach.rs  types.rs
crates/lazyjob-core/src/repositories/: application.rs  company.rs  contact.rs  job.rs  mod.rs  ralph_loop_run.rs
crates/lazyjob-core/src/resume/: content_drafter.rs  docx.rs  fabrication.rs  gap_analyzer.rs  jd_parser.rs  mod.rs  repository.rs  types.rs
crates/lazyjob-core/tests/fixtures/: life-sheet.yaml
crates/lazyjob-llm/: Cargo.toml
crates/lazyjob-llm/src/: anti_fabrication.rs  cost.rs  error.rs  lib.rs  message.rs  mock.rs  provider.rs  registry.rs
crates/lazyjob-llm/src/prompts/: cache.rs  company_research.rs  cover_letter.rs  engine.rs  error.rs  interview_prep.rs  job_discovery.rs  mod.rs  outreach.rs  registry.rs  resume_tailor.rs  sanitizer.rs  types.rs
crates/lazyjob-llm/src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
crates/lazyjob-llm/src/templates/: base_system.toml  company_research.toml  cover_letter.toml  error_response.toml  interview_prep.toml  job_discovery.toml  networking.toml  resume_tailoring.toml  salary_negotiation.toml
crates/lazyjob-ralph/: Cargo.toml
crates/lazyjob-ralph/src/: error.rs  lib.rs  loop_scheduler.rs  loop_types.rs  process_manager.rs  protocol.rs
crates/lazyjob-tui/: Cargo.toml
crates/lazyjob-tui/src/: action.rs  app.rs  event_loop.rs  keybindings.rs  layout.rs  lib.rs  render.rs  theme.rs
crates/lazyjob-tui/src/views/: applications.rs  contacts.rs  dashboard.rs  help_overlay.rs  job_detail.rs  jobs_list.rs  mod.rs  ralph_panel.rs  settings.rs
crates/lazyjob-tui/src/widgets/: confirm_dialog.rs  job_card.rs  mod.rs  modal_dialog.rs  progress_bar.rs  stat_block.rs
docs/: task-22-slide-deck.html
ralph/agentic-job-seeking/: progress.md  prompt.md  ralph.sh  tasks.json
ralph/gap-analysis-ultra-think/: progress.md  prompt.md  ralph.sh  tasks.json
ralph/lazyjob-architecture/: progress.md  prompt.md  ralph.sh  tasks.json
ralph/lazyjob-architecture/specs/: 01-architecture.md
ralph/lazyjob-implementation/: progress.md  prompt.md  ralph.sh  tasks.json
ralph/lazyjob-implementation/output/: plan-task-1.md  plan-task-10.md  plan-task-11.md  plan-task-12.md  plan-task-13.md  plan-task-14.md  plan-task-15.md  plan-task-16.md  plan-task-17.md  plan-task-18.md  plan-task-19.md  plan-task-2.md  plan-task-20.md  plan-task-21.md  plan-task-22.md  plan-task-23.md  plan-task-24.md  plan-task-25.md  plan-task-26.md  plan-task-27.md  plan-task-28.md  plan-task-29.md  plan-task-3.md  plan-task-30.md  plan-task-31.md  plan-task-32.md  plan-task-33.md  plan-task-34.md  plan-task-35.md  (+52 more)
ralph/reverse-engineer-linkedin/: progress.md  prompt.md  ralph.sh  tasks.json
ralph/spec-impl-planner/: progress.md  prompt.md  ralph.sh  tasks.json
ralph/spec-jtbd-expansion/: progress.md  prompt.md  ralph.sh  tasks.json
scripts/: init_db.sh
specs/: 01-architecture-implementation-plan.md  01-architecture.md  01-gaps-core-architecture-implementation-plan.md  01-gaps-core-architecture.md  02-gaps-job-discovery-implementation-plan.md  02-gaps-job-discovery.md  02-llm-provider-abstraction-implementation-plan.md  02-llm-provider-abstraction.md  03-gaps-ralph-ai-implementation-plan.md  03-gaps-ralph-ai.md  03-life-sheet-data-model-implementation-plan.md  03-life-sheet-data-model.md  04-gaps-resume-profile-implementation-plan.md  04-gaps-resume-profile.md  04-sqlite-persistence-implementation-plan.md  04-sqlite-persistence.md  05-gaps-cover-letter-interview-implementation-plan.md  05-gaps-cover-letter-interview.md  05-job-discovery-layer-implementation-plan.md  05-job-discovery-layer.md  06-gaps-application-workflow-implementation-plan.md  06-gaps-application-workflow.md  06-ralph-loop-integration-implementation-plan.md  06-ralph-loop-integration.md  07-gaps-networking-outreach-implementation-plan.md  07-gaps-networking-outreach.md  07-resume-tailoring-pipeline-implementation-plan.md  07-resume-tailoring-pipeline.md  08-cover-letter-generation-implementation-plan.md  08-cover-letter-generation.md  08-gaps-salary-tui-implementation-plan.md  08-gaps-salary-tui.md  09-gaps-platform-privacy-implementation-plan.md  09-gaps-platform-privacy.md  09-tui-design-keybindings-implementation-plan.md  09-tui-design-keybindings.md  10-application-workflow-implementation-plan.md  10-application-workflow.md  10-gaps-saas-mvp-implementation-plan.md  10-gaps-saas-mvp.md  (+109 more)
(+39 files in other folders)
