[workspace]
members = [
    "crates/lazyjob-core",
    "crates/lazyjob-llm",
    "crates/lazyjob-ralph",
    "crates/lazyjob-tui",
    "crates/lazyjob-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
dirs = "6.0"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
secrecy = { version = "0.8", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }
tempfile = "3"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
async-openai = { version = "0.34", features = ["chat-completion", "embedding"] }
ollama-rs = { version = "0.3", default-features = false, features = ["stream", "rustls"] }
cron = "0.12"

lazyjob-core = { path = "crates/lazyjob-core" }
lazyjob-llm = { path = "crates/lazyjob-llm" }
lazyjob-ralph = { path = "crates/lazyjob-ralph" }
lazyjob-tui = { path = "crates/lazyjob-tui" }
