[package]
name = "lazyjob-cli"
version.workspace = true
edition.workspace = true

[dependencies]
lazyjob-core = { workspace = true }
lazyjob-tui = { workspace = true }
secrecy = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
