[package]
name = "lazyjob-cli"
version.workspace = true
edition.workspace = true

[dependencies]
lazyjob-core = { workspace = true }
lazyjob-llm = { workspace = true }
lazyjob-tui = { workspace = true }
secrecy = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
