[package]
name = "lazyjob-llm"
version.workspace = true
edition.workspace = true

[features]
integration = []

[dependencies]
lazyjob-core = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
