[package]
name = "lazyjob-ralph"
version.workspace = true
edition.workspace = true

[dependencies]
lazyjob-core = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

